refactor: use modern tooling for project (#110)