@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022 Airbyte, Inc., all rights reserved.
+ * Copyright (c) 2020-2025 Airbyte, Inc., all rights reserved.
  */
 
 package io.airbyte.protocol.models;
@@ -15,9 +15,7 @@ import static io.airbyte.protocol.models.JsonSchemaReferenceTypes.TIMESTAMP_WITH
 import static io.airbyte.protocol.models.JsonSchemaReferenceTypes.TIME_WITHOUT_TIMEZONE_REFERENCE;
 import static io.airbyte.protocol.models.JsonSchemaReferenceTypes.TIME_WITH_TIMEZONE_REFERENCE;
 
-import com.google.common.collect.BiMap;
-import com.google.common.collect.ImmutableBiMap;
-import com.google.common.collect.ImmutableSet;
+import java.util.Map;
 import java.util.Set;
 
 public class JsonSchemaPrimitiveUtil {
@@ -45,7 +43,7 @@ public class JsonSchemaPrimitiveUtil {
   }
 
   public static final Set<JsonSchemaPrimitive> VO_JSON_SCHEMA_PRIMITIVE_SET =
-      ImmutableSet.of(
+      Set.of(
           JsonSchemaPrimitive.STRING,
           JsonSchemaPrimitive.NUMBER,
           JsonSchemaPrimitive.OBJECT,
@@ -58,18 +56,17 @@ public class JsonSchemaPrimitiveUtil {
     return VO_JSON_SCHEMA_PRIMITIVE_SET.contains(type);
   }
 
-  public static final BiMap<JsonSchemaPrimitive, String> PRIMITIVE_TO_REFERENCE_BIMAP =
-      new ImmutableBiMap.Builder<JsonSchemaPrimitive, String>()
-          .put(JsonSchemaPrimitive.STRING_V1, STRING_REFERENCE)
-          .put(JsonSchemaPrimitive.BINARY_DATA_V1, BINARY_DATA_REFERENCE)
-          .put(JsonSchemaPrimitive.DATE_V1, DATE_REFERENCE)
-          .put(JsonSchemaPrimitive.TIMESTAMP_WITH_TIMEZONE_V1, TIMESTAMP_WITH_TIMEZONE_REFERENCE)
-          .put(JsonSchemaPrimitive.TIMESTAMP_WITHOUT_TIMEZONE_V1, TIMESTAMP_WITHOUT_TIMEZONE_REFERENCE)
-          .put(JsonSchemaPrimitive.TIME_WITH_TIMEZONE_V1, TIME_WITH_TIMEZONE_REFERENCE)
-          .put(JsonSchemaPrimitive.TIME_WITHOUT_TIMEZONE_V1, TIME_WITHOUT_TIMEZONE_REFERENCE)
-          .put(JsonSchemaPrimitive.NUMBER_V1, NUMBER_REFERENCE)
-          .put(JsonSchemaPrimitive.INTEGER_V1, INTEGER_REFERENCE)
-          .put(JsonSchemaPrimitive.BOOLEAN_V1, BOOLEAN_REFERENCE)
-          .build();
+  public static final Map<JsonSchemaPrimitive, String> PRIMITIVE_TO_REFERENCE_BIMAP =
+      Map.of(
+          JsonSchemaPrimitive.STRING_V1, STRING_REFERENCE,
+          JsonSchemaPrimitive.BINARY_DATA_V1, BINARY_DATA_REFERENCE,
+          JsonSchemaPrimitive.DATE_V1, DATE_REFERENCE,
+          JsonSchemaPrimitive.TIMESTAMP_WITH_TIMEZONE_V1, TIMESTAMP_WITH_TIMEZONE_REFERENCE,
+          JsonSchemaPrimitive.TIMESTAMP_WITHOUT_TIMEZONE_V1, TIMESTAMP_WITHOUT_TIMEZONE_REFERENCE,
+          JsonSchemaPrimitive.TIME_WITH_TIMEZONE_V1, TIME_WITH_TIMEZONE_REFERENCE,
+          JsonSchemaPrimitive.TIME_WITHOUT_TIMEZONE_V1, TIME_WITHOUT_TIMEZONE_REFERENCE,
+          JsonSchemaPrimitive.NUMBER_V1, NUMBER_REFERENCE,
+          JsonSchemaPrimitive.INTEGER_V1, INTEGER_REFERENCE,
+          JsonSchemaPrimitive.BOOLEAN_V1, BOOLEAN_REFERENCE);
 
 }
